--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "base58-native": "0.1.2",
     "bignum": "*",
     "bitauth": "^0.1.1",
-    "bitcore": "git://github.com/Stirling/bitcore.git#a5e79d2d1bef245ce788e393b2fbf3cbf4c4caf4",
+    "bitcore": "git://github.com/auroracointools/bitcore.git",
     "bufferput": "git://github.com/bitpay/node-bufferput.git",
     "buffertools": "*",
     "commander": "^2.3.0",
